--- a/DragoonCapes/Assets/Translations/English/English.json
+++ b/DragoonCapes/Assets/Translations/English/English.json
@@ -1,63 +1,63 @@
 {
-	"$status_wolfcape":"Wolf's Fury",
-	"$status_wolfcape_desc":"I am not a wolf in sheep’s clothing, I’m a wolf in wolf’s clothing.",
-	"$status_wolfcape_msg":"AWWWWWOOOOOOOOOOOOO",
-	
-	"$status_deercape":"Deer's Grace",
-	"$status_deercape_desc":"An army of lions commanded by a deer will never be an army of lions",
-	"$status_deercape_msg":"Oh Deery Me, this cape looks absolutely ravishing.",
-	
-	"$status_loxcape":"Lox's Haven",
-	"$status_loxcape_desc1":"The mightly lox's blood strengthens you.",
-	"$status_loxcape_desc2":"Health: ",
-	"$status_loxcape_desc3":"Healing: ",
-	"$status_loxcape_desc4":"hp/tick",
-	"$status_loxcape_msg":"Waddya call a lox in a tar pit? Stuck!",
-	
-	"$status_linencape":"Traveler's Humility",
-	"$status_linencape_desc1":"You have picked up many tricks through your travels.",
-	"$status_linencape_desc2":"Melee Stagger: ",
-	"$status_linencape_desc3":"Projectile Multiplier: ",
-	"$status_linencape_desc4":"Projectile Damage: ",
-	"$status_linencape_msg":"Be wary my son, for evil finds a way.",
-	
-	"$status_trollcape":"Troll's Ambush",
-	"$status_trollcape_desc1":"Trolls evolved to blend in with the night sky, now that advantage is yours. Your knife damage will scale with your sneak skill.",
-	"$status_trollcape_desc2":"Knife damage at maximum sneak: ",
-	"$status_trollcape_msg":"Trololololololo",
-	
+	"$status_wolfcape": "Wolf's Fury",
+	"$status_wolfcape_desc": "I am not a wolf in sheep’s clothing, I’m a wolf in wolf’s clothing.",
+	"$status_wolfcape_msg": "AWWWWWOOOOOOOOOOOOO",
+
+	"$status_deercape": "Deer's Grace",
+	"$status_deercape_desc": "An army of lions commanded by a deer will never be an army of lions",
+	"$status_deercape_msg": "Oh Deery Me, this cape looks absolutely ravishing.",
+
+	"$status_loxcape": "Lox's Haven",
+	"$status_loxcape_desc1": "The mightly lox's blood strengthens you.",
+	"$status_loxcape_desc2": "Health: ",
+	"$status_loxcape_desc3": "Healing: ",
+	"$status_loxcape_desc4": "hp/tick",
+	"$status_loxcape_msg": "Waddya call a lox in a tar pit? Stuck!",
+
+	"$status_linencape": "Traveler's Humility",
+	"$status_linencape_desc1": "You have picked up many tricks through your travels.",
+	"$status_linencape_desc2": "Melee Stagger: ",
+	"$status_linencape_desc3": "Projectile Multiplier: ",
+	"$status_linencape_desc4": "Projectile Damage: ",
+	"$status_linencape_msg": "Be wary my son, for evil finds a way.",
+
+	"$status_trollcape": "Troll's Ambush",
+	"$status_trollcape_desc1": "Trolls evolved to blend in with the night sky, now that advantage is yours. Your knife damage will scale with your sneak skill.",
+	"$status_trollcape_desc2": "Knife damage at maximum sneak: ",
+	"$status_trollcape_msg": "Trololololololo",
+
 	"$item_neckcape": "Neck Skin Cape",
-  	"$item_neckcape_description": "Neck hide is made for mariners and swamp trekkers. Slick and waterproof",
-  	"$status_neckcape": "Neck's Slyness",
-  	"$status_neckcape_tooltip": "A neck in a pond cannot conceive the ocean, but he will still be dry.\n<color=orange>Immune</color> VS <color=orange>Wet</color>",
-  	"$status_neckcape_startmessage": "The line where the sky meets the sea, it calls me",
+	"$item_neckcape_description": "Neck hide is made for mariners and swamp trekkers. Slick and waterproof",
+	"$status_neckcape": "Neck's Slyness",
+	"$status_neckcape_tooltip": "A neck in a pond cannot conceive the ocean, but he will still be dry.\n<color=orange>Immune</color> VS <color=orange>Wet</color>",
+	"$status_neckcape_startmessage": "The line where the sky meets the sea, it calls me",
 
-  	"$item_cultistcape": "Cultist Cape",
-  	"$item_cultistcape_description": "Made from the faithful's fur and some jute. Itchy, but makes you feel warm inside",
-  	"$status_cultistcape": "Cultist's Devotion",
-  	"$status_cultistcape_tooltip": "The gods of the mountain protect their own.",
-  	"$status_cultistcape_startmessage": "I am the hand of the darkness. I am its reach.",
+	"$item_cultistcape": "Cultist Cape",
+	"$item_cultistcape_description": "Made from the faithful's fur and some jute. Itchy, but makes you feel warm inside",
+	"$status_cultistcape": "Cultist's Devotion",
+	"$status_cultistcape_tooltip": "The gods of the mountain protect their own.",
+	"$status_cultistcape_startmessage": "I am the hand of the darkness. I am its reach.",
 
-  	"$item_dvergrcape": "Dvergr Cape",
-  	"$item_dvergrcape_description": "Made by inscribing Dvergr runes on some jute. Makes you tingle with power when worn",
-  	"$status_dvergrcape": "Dvergr Ingenuity",
-  	"$status_dvergrcape_tooltip": "The secretive Dvergr know many superior ways to channel Eitr. This cape is the result of a forced sharing of knowledge.",
-  	"$status_dvergrcape_startmessage": "You love casting spells",
+	"$item_dvergrcape": "Dvergr Cape",
+	"$item_dvergrcape_description": "Made by inscribing Dvergr runes on some jute. Makes you tingle with power when worn",
+	"$status_dvergrcape": "Dvergr Ingenuity",
+	"$status_dvergrcape_tooltip": "The secretive Dvergr know many superior ways to channel Eitr. This cape is the result of a forced sharing of knowledge.",
+	"$status_dvergrcape_startmessage": "You love casting spells",
 
-  	"$item_shamancape": "Shaman Cape",
-  	"$item_shamancape_description": "Chicken Feather cape that brings the tribal energy to you",
-  	"$status_shamancape": "Shaman's Craft",
-  	"$status_shamancape_tooltip": "Let the dead past shape the living future.",
+	"$item_shamancape": "Shaman Cape",
+	"$item_shamancape_description": "Chicken Feather cape that brings the tribal energy to you",
+	"$status_shamancape": "Shaman's Craft",
+	"$status_shamancape_tooltip": "Let the dead past shape the living future.",
 	"$status_shamancape_tooltip1": "Use health as Eitr",
-  	"$status_shamancape_startmessage": "Ekkie Bukaw",
+	"$status_shamancape_startmessage": "Ekkie Bukaw",
 
-  	"$item_serpentcape": "Serpent Cape",
-  	"$item_serpentcape_description": "An unusual cape made from the harvests of the sea",
-  	"$status_serpentcape": "Serpent's Fang",
-  	"$status_serpentcape_tooltip": "Venom courses through your veins.",
-  	"$status_serpentcape_tooltip1": "Damage Bonus as Poison: ",
-  	"$status_serpentcape_startmessage": "That's cold-blooded, man.",
-	
+	"$item_serpentcape": "Serpent Cape",
+	"$item_serpentcape_description": "An unusual cape made from the harvests of the sea",
+	"$status_serpentcape": "Serpent's Fang",
+	"$status_serpentcape_tooltip": "Venom courses through your veins.",
+	"$status_serpentcape_tooltip1": "Damage Bonus as Poison: ",
+	"$status_serpentcape_startmessage": "That's cold-blooded, man.",
+
 	"$item_knightcape": "Knight's Cape",
 	"$item_knightcape_description": "A thick knightly cape to bring honor to you. Chivalry isn't Dead yet!",
 	"$status_knightcape": "Knight's Honor",
@@ -101,63 +101,75 @@
 	"$status_dwarfcape_tooltip": "Tap into the knowledge of Valheim itself.",
 	"$status_dwarfcape_tooltip1": "Eitr:",
 	"$status_dwarfcape_startmessage": "I am the greydwarf and I speak for the trees.",
-	
+
 	"$item_wraithcape": "Wraith Cape",
 	"$item_wraithcape_desc": "A cape that unsettles the stomach to behold. To wear this cape is to embrace death.",
-  	"$status_wraithcape": "Wraith's Half-life",
-  	"$status_wraithcape_tooltip": "Gravity seems to touch you less when you have one foot in helheim, but you also can't properly digest food.",
-  	"$status_wraithcape_tooltip1": "Food Benefits: ",
+	"$status_wraithcape": "Wraith's Half-life",
+	"$status_wraithcape_tooltip": "Gravity seems to touch you less when you have one foot in helheim, but you also can't properly digest food.",
+	"$status_wraithcape_tooltip1": "Food Benefits: ",
 	"$status_wraithcape_tooltip2": "Space to fly",
 	"$status_wraithcape_startmessage": "...",
-	
+
 	"$item_einherjarcape": "Einherjar Cape",
-  	"$item_einherjarcape_desc": "A simple cape that is common in the halls of Valhalla, the all-father smiles down on those wearing this cape.",
-  	"$status_einherjarcape": "Einherjar Throw",
-  	"$status_einherjarcape_tooltip": "The might of Valhalla flows into you to smite their enemies.",
-  	"$status_einherjarcape_tooltip1": "Spear/Polearm Lightning Damage: ",
-  	"$status_einherjarcape_tooltip2": "Spear Throw Speed: ",
+	"$item_einherjarcape_desc": "A simple cape that is common in the halls of Valhalla, the all-father smiles down on those wearing this cape.",
+	"$status_einherjarcape": "Einherjar Throw",
+	"$status_einherjarcape_tooltip": "The might of Valhalla flows into you to smite their enemies.",
+	"$status_einherjarcape_tooltip1": "Spear/Polearm Lightning Damage: ",
+	"$status_einherjarcape_tooltip2": "Spear Throw Speed: ",
 	"$status_einherjarcape_tooltip3": "Throw Stamina Cost: ",
-	"$status_einherjarcape_tooltip4": "Infinite spear throw",
-  	"$status_einherjarcape_startmessage": "To Odin may I go, Once my work is done here...",
+	"$status_einherjarcape_tooltip4": "Weapons Never Leave your Hands",
+	"$status_einherjarcape_startmessage": "To Odin may I go, Once my work is done here...",
 
-  	"$item_surtlingcape": "Surtling Cape",
-  	"$item_surtlingcape_desc": "Lights you on fire but makes you STRONG, a true berserker's choice. The only way to stop the flames is to remove the cape.",
-  	"$status_surtlingcape": "Flames of Muspelheim",
-  	"$status_surtlingcape_tooltip": "Fire envelops you and helps you fight!",
-  	"$status_surtlingcape_tooltip1": "Permanently burning",
-  	"$status_surtlingcape_tooltip2": "Damage Bonus as Fire: ",
-  	"$status_surtlingcape_startmessage": "Fire... Hurts...",
+	"$item_surtlingcape": "Surtling Cape",
+	"$item_surtlingcape_desc": "Lights you on fire but makes you STRONG, a true berserker's choice. The only way to stop the flames is to remove the cape.",
+	"$status_surtlingcape": "Flames of Muspelheim",
+	"$status_surtlingcape_tooltip": "Fire envelops you and helps you fight!",
+	"$status_surtlingcape_tooltip1": "Permanently burning",
+	"$status_surtlingcape_tooltip2": "Damage Bonus as Fire: ",
+	"$status_surtlingcape_startmessage": "Fire... Hurts...",
 
-  	"$item_brawlercape": "Hrungnir Cape",
-  	"$item_brawlercape_desc": "A jotunn's rage and appetite for beer always win out in a brawl.",
-  	"$status_brawlercape": "Jotunn's Stupor",
-  	"$status_brawlercape_tooltip": "Damage bonus while you have a mead active.",
-  	"$status_brawlercape_tooltip1": "Unarmed damage bonus after drinking: ",
-  	"$status_brawlercape_startmessage": "BRAAAAAAP",
+	"$item_brawlercape": "Hrungnir Cape",
+	"$item_brawlercape_desc": "A jotunn's rage and appetite for beer always win out in a brawl.",
+	"$status_brawlercape": "Jotunn's Stupor",
+	"$status_brawlercape_tooltip": "Damage bonus while you have a mead active.",
+	"$status_brawlercape_tooltip1": "Unarmed damage bonus after drinking: ",
+	"$status_brawlercape_startmessage": "BRAAAAAAP",
 
-  	"$item_leechcape": "Leech Cape",
-  	"$item_leechcape_desc": "Cape made from sewn together bloodsacs, as well as they can be.",
-  	"$status_leechcape": "Leech's Greed",
-  	"$status_leechcape_tooltip": "You can heal from the blood of your enemies.",
-  	"$status_leechcape_tooltip1": "Lifesteal: ",
-  	"$status_leechcape_startmessage": "The tang of iron fills your mouth.",
+	"$item_leechcape": "Leech Cape",
+	"$item_leechcape_desc": "Cape made from sewn together bloodsacs, as well as they can be.",
+	"$status_leechcape": "Leech's Greed",
+	"$status_leechcape_tooltip": "You can heal from the blood of your enemies.",
+	"$status_leechcape_tooltip1": "Lifesteal: ",
+	"$status_leechcape_startmessage": "The tang of iron fills your mouth.",
 
-  	"$item_stalkerscape": "Stalker Cape",
-  	"$item_stalkerscape_desc": "A pitch black cape to help you blend in during the night.",
-  	"$status_stalkerscape": "Stalker's Strike",
-  	"$status_stalkerscape_tooltip": "The cold fortifies your arm and aim. Bow bonus only works at night!",
-  	"$status_stalkerscape_startmessage": "I was born in the dark, molded by it.",
+	"$item_stalkerscape": "Stalker Cape",
+	"$item_stalkerscape_desc": "A pitch black cape to help you blend in during the night.",
+	"$status_stalkerscape": "Stalker's Strike",
+	"$status_stalkerscape_tooltip": "The cold fortifies your arm and aim. Bow bonus only works at night!",
+	"$status_stalkerscape_startmessage": "I was born in the dark, molded by it.",
 
-  	"$item_adventurercape": "Adventurer Cape",
-  	"$item_adventurercape_desc": "A green cloak common among adventurers, travellers, and outcasts. It keeps you warm and lets you sleep wherever you like.",
-  	"$status_adventurercape": "Home away from home.",
-  	"$status_adventurercape_tooltip": "Home is where the heart is for a true adventurer.",
+	"$item_adventurercape": "Adventurer Cape",
+	"$item_adventurercape_desc": "A green cloak common among adventurers, travellers, and outcasts. It keeps you warm and lets you sleep wherever you like.",
+	"$status_adventurercape": "Home away from home.",
+	"$status_adventurercape_tooltip": "Home is where the heart is for a true adventurer.",
 	"$status_adventurercape_tooltip1": "Comfort Bonus: ",
 	"$status_adventurercape_tooltip2": "Sleep without shelter or fire",
-  	"$status_adventurercape_startmessage": "Roads go ever on and on.",
+	"$status_adventurercape_startmessage": "Roads go ever on and on.",
 
-  	"$item_featherbelt": "Feather Belt",
-  	"$item_featherbelt_desc": "A magic belt that makes you immune to fall damage.",
-  	"$status_featherbelt": "Free Fall",
-  	"$status_featherbelt_tooltip": "Vikings Rise Up! (And then safely fall!)"
+	"$item_rabbitcape": "Rabbit Cape",
+	"$item_rabbitcape_desc": "A cape made from hare hides, warm and fuzzy while having the strength of scales.",
+	"$status_rabbitcape": "Hare's Wile",
+	"$status_rabbitcape_tooltip": "Speed and tough hides keep hares alive in the dangerous mistlands.",
+	"$status_rabbitcape_startmessage": "The grass smell nice.",
+
+	"$item_rustedcape": "Rusted Cape",
+	"$item_rustedcape_desc": "Made using an old swamp magic trick that makes iron flow like fabric. Unfortunately it doesn't help with rust or the weight.'",
+	"$status_rustedcape": "Iron's Weight",
+	"$status_rustedcape_tooltip": "The mass or iron protecting you is also weighing you down.",
+	"$status_rustedcape_startmessage": "Where there's an iron will, there's an iron way.",
+
+	"$item_featherbelt": "Feather Belt",
+	"$item_featherbelt_desc": "A magic belt that makes you immune to fall damage.",
+	"$status_featherbelt": "Free Fall",
+	"$status_featherbelt_tooltip": "Vikings Rise Up! (And then safely fall!)"
 }
