--- a/DragoonCapes/Assets/Translations/Korean/Korean.json
+++ b/DragoonCapes/Assets/Translations/Korean/Korean.json
@@ -5,80 +5,80 @@
 	
 	"$status_deercape":"사슴의 은혜",
 	"$status_deercape_desc":"사슴이 지휘하는 사자 군대는 결코 사자의 군대가 될 수 없습니다.",
-	"$status_deercape_msg":"어머나 세상에, 이 망토는 정말 매력적이네요.",
+	"$status_deercape_msg":"어머나 사슴에, 이 망토는 정말 매력적이네요.",
 	
 	"$status_loxcape":"록스의 안식처",
 	"$status_loxcape_desc1":"강력한 록스의 피가 당신을 강화합니다.",
 	"$status_loxcape_desc2":"체력: ",
 	"$status_loxcape_desc3":"치유: ",
 	"$status_loxcape_desc4":"hp/tick",
-	"$status_loxcape_msg":"Waddya가 타르 구덩이에 있는 록스를 부르나요? 갇혔어요!",
+	"$status_loxcape_msg":"타르 구덩이에 있는 락스를 뭐라고 부르지? 꼈어!",
 	
 	"$status_linencape":"여행자의 겸손",
 	"$status_linencape_desc1":"당신은 여행을 통해 많은 요령을 터득했습니다.",
 	"$status_linencape_desc2":"근접 비틀거림: ",
 	"$status_linencape_desc3":"투사체 배율: ",
 	"$status_linencape_desc4":"투사체 피해: ",
-	"$status_linencape_msg":"내 아들을 조심하라. 악은 길을 찾느니라.",
+	"$status_linencape_msg":"내 아들아,조심하렴. 악은 항상 길을 찾아내기 마련이란다.",
 	
 	"$status_trollcape":"트롤의 매복",
-	"$status_trollcape_desc1":"트롤은 밤하늘과 조화를 이루도록 진화했습니다. 이제 그 이점은 당신의 것입니다. 칼 피해는 당신의 은신 기술에 따라 증가합니다.",
+	"$status_trollcape_desc1":"트롤은 밤하늘에 녹아들기 위해 진화했습니다. 이제 그 이점은 당신의 것입니다. 칼 피해는 당신의 은신 기술에 따라 증가합니다.",
 	"$status_trollcape_desc2":"최대 은신 시 칼 피해: ",
 	"$status_trollcape_msg":"트롤롤롤롤로",
 	
 	"$item_neckcape": "넥 가죽 망토",
-  	"$item_neckcape_description": "넥 가죽은 선원과 습지 여행자를 위해 만들어졌습니다. 매끄럽고 방수됩니다",
+  	"$item_neckcape_description": "넥 가죽은 선원과 습지 여행자를 위해 만들어졌습니다. 매끄럽고 방수 처리되어 있습니다",
   	"$status_neckcape": "넥의 교활함",
   	"$status_neckcape_tooltip": "연못의 넥은 바다를 상상할 수 없지만 여전히 건조할 것입니다.\n<color=orange>면역</color> VS <color=orange>젖음</color>",
-  	"$status_neckcape_startmessage": "하늘과 바다가 만나는 선, 그것이 나를 부른다",
+  	"$status_neckcape_startmessage": "하늘과 바다가 만나는 곳, 그곳이 나를 부르네",
 
   	"$item_cultistcape": "이교도 망토",
-  	"$item_cultistcape_description": "신앙의 모피와 황마로 만들어졌습니다. 가렵지만 속이 따뜻해집니다",
+  	"$item_cultistcape_description": "신앙이 깃든 모피와 황마로 만들어졌습니다. 가렵지만 마음이 따뜻해집니다",
   	"$status_cultistcape": "이교도의 헌신",
-  	"$status_cultistcape_tooltip": "산의 신들은 자신의 신을 보호합니다.",
-  	"$status_cultistcape_startmessage": 나는 어둠의 손입니다. 나는 어둠의 손에 닿습니다.",
+  	"$status_cultistcape_tooltip": "산의 신들은 자신들을 보호합니다.",
+  	"$status_cultistcape_startmessage": "나는 어둠의 손이다. 나는 그것의 손길이다.",
 
   	"$item_dvergrcape": "드베르그 망토",
-  	"$item_dvergrcape_description": "황마에 드베르그 룬을 새겨서 만들었습니다. 착용 시 힘이 들어가 짜릿하게 만들어줍니다.",
-  	"$status_dvergrcape": "드베르그 독창성",
-  	"$status_dvergrcape_tooltip": "비밀스러운 드베르그는 에이트르를 채널링하는 여러 가지 뛰어난 방법을 알고 있습니다. 이 망토는 강제로 지식을 공유한 결과입니다.",
-  	"$status_dvergrcape_startmessage": "당신은 주문 시전을 좋아합니다",
+  	"$item_dvergrcape_description": "황마에 드베르그 룬을 새겨서 만들었습니다. 착용 시 짜릿한 힘을 느낍니다.",
+  	"$status_dvergrcape": "드베르그의 기교",
+  	"$status_dvergrcape_tooltip": "비밀스러운 드베르그는 에이트르와 동조하는 여러 가지 뛰어난 방법을 알고 있습니다. 이 망토는 강제로 지식을 공유한 결과입니다.",
+  	"$status_dvergrcape_startmessage": "당신은 주문 시전을 즐깁니다",
 
   	"$item_shamancape": "주술사 망토",
-  	"$item_shamancape_description": "부족의 기운을 전해 주는 닭 깃털 망토",
+  	"$item_shamancape_description": "부족의 기운을 전해 주는 닭 깃털 망토입니다",
   	"$status_shamancape": "주술사의 기술",
   	"$status_shamancape_tooltip": "죽은 과거가 살아있는 미래를 만들도록 하세요.",
 	"$status_shamancape_tooltip1": "체력을 에이트르로 사용",
   	"$status_shamancape_startmessage": "에키 부카우(Ekkie Bukaw)",
 
   	"$item_serpentcape": "바다뱀 망토",
-  	"$item_serpentcape_description": "바다의 수확으로 만들어진 특이한 망토",
+  	"$item_serpentcape_description": "바다의 수확물로 만들어진 특이한 망토입니다.",
   	"$status_serpentcape": "바다뱀의 송곳니",
   	"$status_serpentcape_tooltip": "독이 혈관을 타고 흐릅니다.",
   	"$status_serpentcape_tooltip1": "독으로 인한 피해 보너스: ",
   	"$status_serpentcape_startmessage": "그건 냉혈한 놈이군요.",
 	
 	"$item_knightcape": "기사의 망토",
-	"$item_knightcape_description": "당신에게 명예를 가져다줄 두꺼운 기사의 망토입니다. 기사도는 아직 죽지 않았습니다!",
+	"$item_knightcape_description": "당신에게 명예를 가져다줄 두꺼운 기사의 망토입니다. 기사도 정신은 아직 죽지 않았습니다!",
 	"$status_knightcape": "기사의 명예",
 	"$status_knightcape_tooltip": "막고, 반격하고, 회피하세요.",
 	"$status_knightcape_tooltip1": "비틀거림 저항: ",
-	"$status_knightcape_startmessage": "아직 아무것도 보지 못했습니다",
+	"$status_knightcape_startmessage": "당신은 아직 아무것도 보지 못했네",
 
-	"$item_crusadercape": "크루세이더의 망토",
+	"$item_crusadercape": "십자군 망토",
 	"$item_crusadercape_description": "미드가르드에서 기억하는 오래된 인장이 새겨진 두꺼운 망토입니다. 언데드들은 왠지 그것을 두려워하는 것 같습니다.",
-	"$status_crusadercape": "크루세이더의 강타",
-	"$status_crusadercape_tooltip": "나의 정의로운 분노를 느끼고 회개하라!",
+	"$status_crusadercape": "십자군의 강타",
+	"$status_crusadercape_tooltip": "나의 의로운 분노를 느끼고 회개하라!",
 	"$status_crusadercape_tooltip1": "영혼 피해: ",
 	"$status_crusadercape_tooltip2": "타격 피해: ",
 	"$status_crusadercape_startmessage": "신의 뜻대로(Deus Vult)",
 
-	"$item_berserkcape": "광전사의 망토",
+	"$item_berserkcape": "광전사 망토",
 	"$item_berserkcape_description": "곰 머리 망토로 따뜻함과 추위 모두를 막아줍니다.",
 	"$status_berserkcape": "광전사의 분노",
-	"$status_berserkcape_tooltip": "전투에서는 분노가 지배하고 광포해지며 잃은 체력에 따라 근접 피해가 증가합니다.",
+	"$status_berserkcape_tooltip": "전투 중에 분노로 휩싸입니다. 광포해지며 잃은 체력에 따라 근접 피해가 증가합니다.",
 	"$status_berserkcape_tooltip1": "최대 피해: ",
-	"$status_berserkcape_startmessage": "으아아아아아아",
+	"$status_berserkcape_startmessage": "우아아아아아아아아아악",
 
 	"$item_bushcape": "수풀 망토",
 	"$item_bushcape_description": "현지 나뭇잎과 잘 어울리도록 만든 망토입니다. 사냥꾼의 가장 친한 친구입니다.",
@@ -91,7 +91,7 @@
 	"$item_boarcape": "멧돼지 망토",
 	"$item_boarcape_description": "멧돼지 가죽으로 만든 단순한 망토로, 미래의 망토를 위한 본보기가 됩니다.",
 	"$status_boarcape": "멧돼지의 활력",
-	"$status_boarcape_tooltip": "화난 멧돼지의 끝없는 결단력으로 싸워보세요.",
+	"$status_boarcape_tooltip": "화난 멧돼지의 끝없는 투지로 싸워보세요.",
 	"$status_boarcape_tooltip1": "회피 스태미나 감소: ",
 	"$status_boarcape_startmessage": "갑자기 버섯과 당근이 너무 먹고 싶어졌어요.",
 
@@ -104,49 +104,49 @@
 	
 	"$item_wraithcape": "망령 망토",
 	"$item_wraithcape_desc": "보기만 해도 위가 불안해지는 망토입니다. 이 망토를 입는 것은 죽음을 받아들이는 것입니다.",
-  	"$status_wraithcape": "망령의 하프-라이프",
-  	"$status_wraithcape_tooltip": "한 발이 지옥에 있으면 중력의 영향이 덜한 것 같지만 음식을 제대로 소화할 수도 없습니다.",
+  	"$status_wraithcape": "망령의 반쪽의 삶",
+  	"$status_wraithcape_tooltip": "당신이 헬헤임에 한 발을 디딜 때 중력이 당신에게 덜 영향을 미칩니다. 하지만 음식을 제대로 소화할 수 없습니다.",
   	"$status_wraithcape_tooltip1": "음식의 이점: ",
-	"$status_wraithcape_tooltip2": "날 수 있는 공간",
+	"$status_wraithcape_tooltip2": "비행 공간",
 	"$status_wraithcape_startmessage": "...",
 	
 	"$item_einherjarcape": "에인헤랴르(Einherjar) 망토",
-  	"$item_einherjarcape_desc": "발할라의 홀에서 흔히 볼 수 있는 소박한 망토, 아버지 오딘은 이 망토를 입은 사람들에게 미소를 짓습니다.",
-  	"$status_einherjarcape": "에인헤랴르(Einherjar) 던지기",
+  	"$item_einherjarcape_desc": "발할라의 전당에서 흔히 볼 수 있는 소박한 망토, 아버지 오딘은 이 망토를 입은 사람들에게 미소를 짓습니다.",
+  	"$status_einherjarcape": "에인헤랴르(Einherjar) 투척",
   	"$status_einherjarcape_tooltip": "발할라의 힘이 당신에게 흘러들어 그들의 적을 물리칩니다.",
   	"$status_einherjarcape_tooltip1": "창/폴암 번개 피해: ",
-  	"$status_einherjarcape_tooltip2": "창 던지기 속도: ",
+  	"$status_einherjarcape_tooltip2": "창 투척 속도: ",
 	"$status_einherjarcape_tooltip3": "투척 체력 소모: ",
-	"$status_einherjarcape_tooltip4": "무한 창 던지기",
-  	"$status_einherjarcape_startmessage": "여기서 내 작업이 끝나면 오딘에게 가도 됩니다...",
+	"$status_einherjarcape_tooltip4": "무한 창 투척",
+  	"$status_einherjarcape_startmessage": "내 일이 끝나면 오딘께로 가리라...",
 
   	"$item_surtlingcape": "수르트링 망토",
-  	"$item_surtlingcape_desc": "당신에게 불을 붙이지만 진정한 광전사의 선택인 당신을 강하게 만듭니다. 불을 멈추는 유일한 방법은 망토를 제거하는 것입니다.",
+  	"$item_surtlingcape_desc": "당신에게 불을 붙이지만 진정한 광전사의 선택인 당신을 강하게 만듭니다. 불을 멈추는 유일한 방법은 망토를 벗는 것뿐입니다.",
   	"$status_surtlingcape": "무스펠하임의 불꽃",
   	"$status_surtlingcape_tooltip": "불이 당신을 감싸고 당신이 싸우는 데 도움이 됩니다!",
   	"$status_surtlingcape_tooltip1": "영원히 불타오름",
   	"$status_surtlingcape_tooltip2": "불로 인한 피해 보너스: ",
-  	"$status_surtlingcape_startmessage": "불... 아파요...",
+  	"$status_surtlingcape_startmessage": "불... 아프다...",
 
   	"$item_brawlercape": "흐룽그니르(Hrungnir) 망토",
-  	"$item_brawlercape_desc": "요툰의 분노와 맥주에 대한 식욕은 항상 난투에서 승리합니다.",
-  	"$status_brawlercape": "요툰의 무감각",
-  	"$status_brawlercape_tooltip": "벌꿀주 효과가 활성화 된 동안 데미지 보너스",
+  	"$item_brawlercape_desc": "요툰의 분노와 맥주에 대한 욕망은 항상 난투에서 승리합니다.",
+  	"$status_brawlercape": "요툰의 혼미함",
+  	"$status_brawlercape_tooltip": "벌꿀주를 섭취한 동안 데미지 보너스",
   	"$status_brawlercape_tooltip1": "음주 후 비무장 피해 보너스: ",
-  	"$status_brawlercape_startmessage": "브으아아아아아아악",
+  	"$status_brawlercape_startmessage": "브라아아아앗",
 
   	"$item_leechcape": "거머리 망토",
-  	"$item_leechcape_desc": "피주머니를 꿰매어 만든 망토입니다. 그럴 수도 있습니다.",
+  	"$item_leechcape_desc": "피주머니를 꿰매어 만든 망토입니다. 최대한의 노력으로 만들어졌습니다.",
   	"$status_leechcape": "거머리의 탐욕",
-  	"$status_leechcape_tooltip": "적의 피로 치유할 수 있습니다.",
-  	"$status_leechcape_tooltip1": "생명력 탈취: ",
+  	"$status_leechcape_tooltip": "적의 피로 회복할 수 있습니다.",
+  	"$status_leechcape_tooltip1": "생명력 흡수: ",
   	"$status_leechcape_startmessage": "쇠의 톡 쏘는 맛이 입안을 가득 채웁니다.",
 
   	"$item_stalkerscape": "스토커 망토",
-  	"$item_stalkerscape_desc": "밤에 섞여들 수 있도록 도와주는 새까만 망토입니다.",
+  	"$item_stalkerscape_desc": "밤에 잘 어울리도록 도와주는 새까만 망토입니다.",
   	"$status_stalkerscape": "스토커의 공격",
-  	"$status_stalkerscape_tooltip": "추위는 팔과 조준을 강화합니다. 활 보너스는 밤에만 작동합니다!",
-  	"$status_stalkerscape_startmessage": "나는 어둠 속에서 태어나 어둠에 의해 형성되었습니다.",
+  	"$status_stalkerscape_tooltip": "추위가 팔과 조준을 강화합니다. 활 보너스는 밤에만 적용됩니다!",
+  	"$status_stalkerscape_startmessage": "나는 어둠 속에서 태어나 어둠에 의해 형성되었다.",
 				
   	"$item_adventurercape": "모험가 망토",
   	"$item_adventurercape_desc": "모험가, 여행자, 소외된 사람들이 흔히 사용하는 녹색 망토입니다. 몸을 따뜻하게 해주고 원하는 곳 어디에서든 잠을 잘 수 있게 해줍니다.",
@@ -159,5 +159,5 @@
   	"$item_featherbelt": "깃털 벨트",
   	"$item_featherbelt_desc": "추락 피해에 면역이 되는 마법 벨트입니다.",
   	"$status_featherbelt": "자유낙하",
-  	"$status_featherbelt_tooltip": "바이킹이 일어섰습니다! (그리고 안전하게 추락합니다!)"
+  	"$status_featherbelt_tooltip": "바이킹이여 일어나라!(그리고 안전하게 떨어져라!)"
 }
